# go2-audio

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  package.xml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: dds_audio_analysis.md
go2_audio/: __init__.py  audio_utils.py  capture.py  denoise.py  ros_node.py
launch/: audio.launch.py
ros2_node/: go2_audio_node.py
scripts/: listen_audio.sh  record_audio.sh
standalone/: capture_audio.py
tests/: test_audio_utils.py  test_capture.py  test_noise_reducer.py  test_packaging.py  test_ros_node.py
